--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -787,4 +787,5 @@
     <string name="report.spam">It hurts religious sentiments</string>
     <string name="report.not_relevant">Any other</string>
     <string name="reply">Reply</string>
+    <string name="choose_account">Choose an account to continue</string>
 </resources>
