--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -802,5 +802,8 @@
     <string name="profile_completion">Profile Completion</string>
     <string name="improve_reachability">Improve the reachability by updating the bio.</string>
     <string name="choose_account">Choose an account to continue</string>
+    <string name="write_about_yourself">Write about yourself</string>
+    <string name="child_details">Child Details</string>
+    <string name="add_child_details">Add Child Details</string>
 
 </resources>
