--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -788,4 +788,7 @@
     <string name="report.not_relevant">Any other</string>
     <string name="reply">Reply</string>
     <string name="choose_account">Choose an account to continue</string>
+    <string name="write_about_yourself">Write about yourself</string>
+    <string name="child_details">Child Details</string>
+    <string name="add_child_details">Add Child Details</string>
 </resources>
