theme color changes

--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -261,7 +261,7 @@
     <string name="home_screen.group.title">JOIN A GROUP</string>
     <string name="home_screen.suggested_topic.title">SUGGESTED TOPICS</string>
     <string name="home_screen.profile.title">MY ACCOUNT</string>
-    <string name="home_screen.select_an_option.title">SELECT AN OPTION</string>
+    <string name="home_screen.select_an_option.title">DISCOVER</string>
     <string name="home_screen.trending.become_blogger">SHARE YOUR STORY</string>
     <string name="home_screen.trending.first_video_upload">VIDEOS</string>
     <string name="home_screen.explore.title">EXPLORE</string>
