--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -272,11 +272,17 @@
     <string name="home_screen.trending_list_header.take_me_there">OKAY GOT IT! TAKE ME THERE</string>
 
     <string-array name="onboarding_title_array">
-        <item>HARNESSING THE WISDOM OF MUMS</item>
-        <item>BLOG IN ANY ONE OF 6 LANGUAGES</item>
-        <item>WATCH VIDEOS</item>
-        <item>DISCOVER YOUR CITY\'S BEST</item>
+        <item>Create a Blog</item>
+        <item>Enjoy Blogs in any of 6 Languages</item>
+        <item>Watch Videos on the go</item>
+        <item>With Support Groups, you are not alone</item>
     </string-array>
+
+    <string name="onboarding.desc_1">Every mom has a story. What\'s yours? Share it in text or video.</string>
+    <string name="onboarding.desc_2">Choose from English, Hindi, Bangla, Marathi, Tamil and Telugu.</string>
+    <string name="onboarding.desc_3">Momspresso TV brings you beautiful, inspiring, useful, and funny videos. All at one place!</string>
+    <string name="onboarding.desc_4">Harness the power of our mom community. Share your queries and help others!</string>
+
 
     <string name="onboarding_desc_array.tutorial_1.blogs">BLOGS</string>
     <string name="onboarding_desc_array.tutorial_1.videos">MOMVLOGS</string>
@@ -830,5 +836,7 @@
     <string name="coachmark.edit_profile">Edit and update your profile to stay updated on blogger meets and sponsored articles.</string>
     <string name="coachmark.app_setting">You can edit your app preferences and language preferences at one place. Subscribe to notifications and categories here.</string>
     <string name="coachmark.publish">View your published articles, stories, and mom vlogs at one place.</string>
+    <string name="mobile">MOBILE NO</string>
+
 
 </resources>
